src/main/java/org/example/playground/error/exception/ResourceNotFoundException.java
package org.example.playground.error.exception;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
